Updated plottings and code restructured using black

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,5 +10,13 @@
 <body class="min-h-screen bg-gray-900 text-white flex flex-row items-center justify-center gap-12">
     {% block content %}
     {% endblock %}
+    <footer class="fixed bottom-0 w-full h-10 left-1/2 transform -translate-x-1/2 bg-gray-800 bg-opacity-80 rounded-lg px-6 py-2 shadow-lg text-sm ">
+        <p class="text-center text-lg">
+            Made by
+            <a href="https://github.com/SaiDhinakar" class="text-blue-400 hover:underline" target="_blank" rel="noopener noreferrer">
+                Sai Dhinakar
+            </a>
+        </p>
+    </footer>
 </body>
 </html>
